get product via id
